Modificado el decoder de java