@@ -52,6 +52,7 @@ import org.springframework.security.crypto.bcrypt.BCrypt;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 import sun.misc.BASE64Decoder;
+import java.util.Base64;
 
 /**
  *
@@ -466,29 +467,15 @@ public class RedSocial
         
         usuarioConectado.setNombre(_nombre);
         usuarioConectado.setApellidos(_apellidos);
-        usuarioConectado.setEmail(_email);
-        
-        dir_foto=dir_foto.substring(23);
+        usuarioConectado.setEmail(_email);        
         
         if(dir_foto != null)
         {
-            //File foto=new File(dir_foto);
-            
-            //byte[] _fotoperfil=Base64.decode(dir_foto); 
-            //byte[] _fotoperfil = Base64.getDecoder().decode(dir_foto);
-            BASE64Decoder decoder = new BASE64Decoder();
-            byte[] _fotoperfil = decoder.decodeBuffer(dir_foto);
-            usuarioConectado.setFotoperfil(_fotoperfil);
-
-
-            //byte[] _fotoperfil=Files.readAllBytes(foto.toPath());
-            
+            dir_foto=dir_foto.substring(23);
+            byte[] _fotoperfil = Base64.getDecoder().decode(dir_foto);
+            usuarioConectado.setFotoperfil(_fotoperfil);   
             
         }
-//        else
-//        {
-//            usuarioConectado.setFotoperfil(null);
-//        }
         
         daoUsuario.actualizarUsuario(usuarioConectado);
     }
